Fri Mar  6 02:26:03 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* dir.c (replace_real_basename): shouldn't create Ruby object before
	  the object system is loaded.
	  [ruby-core:68430] [Bug #10941]

Wed Mar  5 16:58:43 2015  Kazuki Tanaka  <gogotanaka@ruby-lang.org>

	* hash.c: [DOC] #delete method actually returns nil, if the key
	  is not found. [fix GH-844][ci skip] Patch by @ivdma

Wed Mar  5 12:22:23 2015  Kazuki Tanaka  <gogotanaka@ruby-lang.org>

	* math.c: refactoring: remove unnecessary variable d0 to unify code
	  appearance.

Thu Mar  5 11:50:54 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_eval.c (eval_string_with_cref): A binding should keep
	  refinements activation information and the refinements should be
	  activated in subsequent eval calls with the binding.
	  [ruby-core:67945] [Bug #10818]

Thu Mar  5 11:16:55 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* test/ruby/test_refinement.rb: There is no need anymore to suppress
	  warnings.

Thu Mar  5 08:31:02 2015  Rei Odaira  <Rei.Odaira@gmail.com>

	* random.c (random_raw_seed): Avoid calling fill_random_bytes()
	  if the requested size is 0. AIX returns -1 for 0-byte read from
	  /dev/urandom, while other UNIX returns 0. With this change,
	  Random.raw_seed(0) consistently returns "" in any UNIX.

Wed Mar  4 12:43:32 2015  Kazuki Tanaka  <gogotanaka@ruby-lang.org>

	* test/ruby/test_math.rb (assert_float_and_int): Refactor test cases
	  by introducing assert_float_and_int. [misc #10810]

Wed Mar  4 11:52:30 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* symbol.c (Init_sym): make dsym_fstrs a hash compared by identity
	  as the keys are unique fstrings, to get rid of running hash and
	  compare methods and causing new object allocation during garbage
	  collection phase.  [ruby-dev:48891] [Bug #10933]

Wed Mar  4 10:16:57 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* enum.c: Fix typo in slice_after's exception message.
	  [fix GH-842][ci skip] Patch by @jsyeo
